--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 <header>
   <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 px-lg-5 sticky-navbar">
-  <a href="index" class="navbar-brand d-flex align-items-center">
+  <a href="/" class="navbar-brand d-flex align-items-center">
     <img src="img/logo.jpg" alt="Polarhomes Luxury Homes Logo" class="logo-img me-2" />
     <h1 class="m-0 fancy-text">Polarhomes</h1>
   </a>
@@ -101,7 +101,7 @@
   <!-- Navbar Links -->
   <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
     <ul class="navbar-nav ms-auto text-uppercase fw-semibold">
-      <li class="nav-item"><a href="index" class="nav-link active">Home</a></li>
+      <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
       <li class="nav-item"><a href="about" class="nav-link">About Us</a></li>
       <li class="nav-item"><a href="service" class="nav-link">Our Services</a></li>
       <li class="nav-item"><a href="room" class="nav-link">Our Rooms</a></li>
@@ -211,21 +211,21 @@
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
             <div class="stat-card text-center p-4 shadow-sm">
               <i class="fa fa-hotel fa-2x text-gold mb-3"></i>
-              <h2 class="fw-bold" data-toggle="counter-up">52</h2>
+              <h2 class="fw-bold" data-toggle="counter-up">59</h2>
               <p class="mb-0 text-muted">Premium Listings</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
             <div class="stat-card text-center p-4 shadow-sm">
               <i class="fa fa-users-cog fa-2x text-gold mb-3"></i>
-              <h2 class="fw-bold" data-toggle="counter-up">97</h2>
+              <h2 class="fw-bold" data-toggle="counter-up">89</h2>
               <p class="mb-0 text-muted">Verified Hosts</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
             <div class="stat-card text-center p-4 shadow-sm">
               <i class="fa fa-users fa-2x text-gold mb-3"></i>
-              <h2 class="fw-bold" data-toggle="counter-up">216</h2>
+              <h2 class="fw-bold" data-toggle="counter-up">224</h2>
               <p class="mb-0 text-muted">Happy Guests</p>
             </div>
           </div>
@@ -331,7 +331,6 @@
   line-height: 1.7;
 }
 </style>
-
 
     <!-- Booking Start -->
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
@@ -461,7 +460,7 @@
       
       <!-- Logo and About -->
       <div class="col-md-6 col-lg-4">
-        <a href="index">
+        <a href="/">
           <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 140px; border-radius: 12px;">
         </a>
         <p class="mb-3 text-muted" style="font-size: 0.95rem; line-height: 1.7;">
@@ -522,7 +521,7 @@
         Designed by <a class="text-decoration-none text-dark fw-semibold" href="https://antocapteknologies.com">Antocap Teknologies</a>
       </div>
       <div class="col-md-6 text-center text-md-end small">
-        <a class="text-dark me-3 text-decoration-none" href="index">Home</a>
+        <a class="text-dark me-3 text-decoration-none" href="/">Home</a>
         <a class="text-dark text-decoration-none" href="contact">Help</a>
       </div>
     </div>
