--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-2 px-lg-4">
     <!-- Brand Logo -->
-    <a href="index" class="navbar-brand d-flex align-items-center">
+    <a href="/" class="navbar-brand d-flex align-items-center">
       <img src="img/logo.jpg" alt="Polarhomes Luxury Homes Logo" class="logo-img me-2" />
       <h1 class="m-0 fancy-text">PolarHomes</h1>
     </a>
@@ -122,7 +122,7 @@
     <!-- Navbar Links -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
       <ul class="navbar-nav ms-auto text-uppercase fw-semibold">
-        <li class="nav-item"><a href="index" class="nav-link active">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
         <li class="nav-item"><a href="about" class="nav-link">About Us</a></li>
         <li class="nav-item"><a href="service" class="nav-link">Our Services</a></li>
         <li class="nav-item"><a href="room" class="nav-link">Our Rooms</a></li>
@@ -240,7 +240,7 @@
             <div class="border rounded p-1">
               <div class="border rounded text-center p-4">
                 <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                <h2 class="mb-1" data-toggle="counter-up">52</h2>
+                <h2 class="mb-1" data-toggle="counter-up">72</h2>
                 <p class="mb-0">Premium Listings</p>
               </div>
             </div>
@@ -249,7 +249,7 @@
             <div class="border rounded p-1">
               <div class="border rounded text-center p-4">
                 <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                <h2 class="mb-1" data-toggle="counter-up">97</h2>
+                <h2 class="mb-1" data-toggle="counter-up">87</h2>
                 <p class="mb-0">Verified Hosts</p>
               </div>
             </div>
@@ -258,7 +258,7 @@
             <div class="border rounded p-1">
               <div class="border rounded text-center p-4">
                 <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                <h2 class="mb-1" data-toggle="counter-up">216</h2>
+                <h2 class="mb-1" data-toggle="counter-up">226</h2>
                 <p class="mb-0">Happy Guests</p>
               </div>
             </div>
